--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="action_settings">Settings</string>
 
     <string name="search">搜索</string>
+
+    <string-array name="main_page_titles">
+        <item>宝宝看</item>
+        <item>宝宝听</item>
+        <item>宝宝学</item>
+    </string-array>
 </resources>
