--- a/Framework/src/main/res/values/strings.xml
+++ b/Framework/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
 
     <string name="internet_error">网络未连接或不可用，请检查后重试</string>
 
+    <string name="ok">确定</string>
+    <string name="cancel">取消</string>
+
+    <!-- exception -->
+    <string name="exception_send_success">反馈成功！谢谢配合！</string>
+    <string name="exception_dialog_message">非常抱歉，程序出现异常！点击确定反馈异常信息，我们会尽快解决！谢谢配合！</string>
+
 </resources>
