--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="search">搜索</string>
+    <string name="webview_user_agent">&#160;MeMeBrowserNative/%s (Android)</string>
 
     <string-array name="main_page_titles">
         <item>宝宝看</item>
